Large table added and compiling but runs over page

--- a/glossary.tex
+++ b/glossary.tex
@@ -13,7 +13,9 @@
 \newacronym{MPC}{MPC}{Model Predictive Control}
 \newacronym{AMPC}{AMPC}{Adaptive Model Predictive Control}
 \newacronym{PID}{PID}{Proportional Integral Derivative}
+\newacronym{PD}{PD}{Proportional Derivative}
 \newacronym{LQR}{LQR}{Linear Quadratic Regulator}
+\newacronym{iLQR}{iLQR}{iterative Linear Quadratic Regulator}
 
 \newacronym{DMD}{DMD}{Dynamic Mode Decomposition}
 \newacronym{DMDc}{DMDc}{Dynamic Mode Decomposition with Control}
@@ -75,6 +77,8 @@
 \newacronym{SMC}{SMC}{Sliding Mode Control}
 \newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
 \newacronym{ADRC}{ADRC}{Active Disturbance Rejection Control}
-
-
+\newacronym{BS}{BS}{Back-stepping}
+\newacronym{CAFVI}{CAFVI}{Continuous Action Fitted Value Iteration}
+\newacronym{ILC}{ILC}{Iterative Learning Control}
+\newacronym{BISMC}{BISMC}{Back-Stepping Integral Sliding Mode Control}
 
