--- a/glossary.tex
+++ b/glossary.tex
@@ -78,6 +78,7 @@
 \newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
 \newacronym{ADRC}{ADRC}{Active Disturbance Rejection Control}
 \newacronym{BS}{BS}{Back-stepping}
+\newacronym{EB}{EB}{Energy-Based}
 \newacronym{CAFVI}{CAFVI}{Continuous Action Fitted Value Iteration}
 \newacronym{ILC}{ILC}{Iterative Learning Control}
 \newacronym{BISMC}{BISMC}{Back-Stepping Integral Sliding Mode Control}
