Added Different payloads and Unknown dynamics paragraphs

--- a/frontmatter/publication.tex
+++ b/frontmatter/publication.tex
@@ -2,7 +2,7 @@
 \addcontentsline{toc}{chapter}{Publication}
 \makeatletter\@mkboth{}{Publication}\makeatother
 
-Sections of this work form part of the following paper which was accepted for publication:
+Sections of this work form part of the following paper and was accepted for publication:
 
 \paragraph
 J.M. Louw and H.W. Jordaan, 
