--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -1,4 +1,8 @@
-\newpage
+% ?? Fix Table of literature
+% https://docs.google.com/spreadsheets/d/1jw2rWzO23fUF4sSDTCzJE1Sc9mvNLo3NGZaDicredc8/edit#gid=1305340631
+
+
+\newpage % or \pagebreak
 
 \begin{landscape}
     \begin{tiny}
