Added last bit of unknown dynamics section

--- a/glossary.tex
+++ b/glossary.tex
@@ -16,6 +16,7 @@
 \newacronym{PD}{PD}{Proportional Derivative}
 \newacronym{LQR}{LQR}{Linear Quadratic Regulator}
 \newacronym{iLQR}{iLQR}{iterative Linear Quadratic Regulator}
+\newacronym{NF}{NF}{Notch Filter}
 
 \newacronym{DMD}{DMD}{Dynamic Mode Decomposition}
 \newacronym{DMDc}{DMDc}{Dynamic Mode Decomposition with Control}
@@ -72,11 +73,13 @@
 \newacronym{RL}{RL}{Reinforcement Learning}
 \newacronym{RRT}{RRT}{Rapidly-exploring Random Tree}
 \newacronym{BFBEL}{BFBEL}{Bidirectional Fuzzy Brain Emotional Learning}
+\newacronym{BBEL}{BBEL}{Bidirectional Brain Emotional Learning}
 \newacronym{H-inf}{$\mathscr{H}_\infty$}{H-Infinity}
 \newacronym{RISE}{RISE}{Robust Integral of the Sign of the Error}
 \newacronym{SMC}{SMC}{Sliding Mode Control}
 \newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
 \newacronym{ADRC}{ADRC}{Active Disturbance Rejection Control}
+\newacronym{ESO}{ESO}{Extended State Observer}
 \newacronym{BS}{BS}{Back-stepping}
 \newacronym{EB}{EB}{Energy-Based}
 \newacronym{CAFVI}{CAFVI}{Continuous Action Fitted Value Iteration}
