--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -31,7 +31,7 @@
         \toprule
             \textbf{Author}              & \textbf{Year}                   & \textbf{Proposed}          & \textbf{Baseline}      & \textbf{Plant model} & \textbf{Parameter} & \textbf{Unknown} & \textbf{Unmeasured} & \textbf{Different} & \textbf{Practical} & \textbf{Outdoor} \\
         \midrule
-            \citet{Muthusamy2021a}       & \citeyear{Muthusamy2021a}       & \gls{BFBEL}                & -                      & none                 & yes                & yes              & yes                 &                    & yes                &                  \\
+            \citet{Muthusamy2021}       & \citeyear{Muthusamy2021}       & \gls{BFBEL}                & -                      & none                 & yes                & yes              & yes                 &                    & yes                &                  \\
             \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (nonlinear)       & \gls{BS}, Energy-based & none                 & yes                & yes              &                     &                    & yes                &                  \\
             \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \gls{BISMC} with \gls{ILC} & -                      & non-linear           & yes                & yes              &                     &                    &                    &                  \\
             \citet{Faust2014}            & \citeyear{Faust2014}            & \gls{RL} (\gls{CAFVI})     & -                      & none                 & yes                & yes              &                     &                    & yes                &                  \\
@@ -64,6 +64,7 @@
 % Add \\ to last line otherwise error.
 % Use tabularx
 % ?? Remove year column to save space
+% ?? Added acronyms full
 
     \end{tiny}
 \end{landscape}
